[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/npc_actor_sprites/greklovick/XEMAROKK NPC SPRITE TEST.png" type="Texture" id=1]
[ext_resource path="res://src/npc_actors/grek npc/Xemarokk.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/dialogue box test.PNG" type="Texture" id=3]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 396, 641 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "MAINSTATE",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 169.5, 264 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 314.5, 128.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 106.5, 143 )

[node name="XemarokkNPC" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 259
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -14, -172 )
z_index = 15
frames = SubResource( 2 )
animation = "MAINSTATE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -12.5, -116 )
shape = SubResource( 3 )

[node name="TalktoAreaLegs" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalktoAreaLegs"]
position = Vector2( -157.5, 18.5 )
shape = SubResource( 6 )

[node name="TalktoAreaHead" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalktoAreaHead"]
position = Vector2( -10.5, -524 )
shape = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 480.0
margin_right = 1018.0
margin_bottom = 593.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Dialogue" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 4 )
text = "XEMAROKK_NPC_TALK_LEGS"

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 452.0
margin_right = 136.0
margin_bottom = 476.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Name" type="Label" parent="CanvasLayer/NinePatchRect2"]
margin_left = 6.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Xemarokk"

[connection signal="body_entered" from="TalktoAreaLegs" to="." method="_on_TalktoAreaLegs_body_entered"]
[connection signal="body_exited" from="TalktoAreaLegs" to="." method="_on_TalktoAreaLegs_body_exited"]
[connection signal="body_entered" from="TalktoAreaHead" to="." method="_on_TalktoAreaHead_body_entered"]
[connection signal="body_exited" from="TalktoAreaHead" to="." method="_on_TalktoAreaHead_body_exited"]
